Validacao de regras de registro de usuarios, ajustes no swagger e no README
